# LumineEngine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  rr.bat  run.py
Engine/: CMakeLists.txt
Engine/Graphics/: CMakeLists.txt  GTypes.h  Graphics.cppm  GraphicsFactory.cpp  GraphicsFactory.cppm  WindowSurface.cpp  WindowSurface.cppm  graphics.cpp
Engine/Graphics/DirectX12/: DX12Factory.cpp
Engine/Graphics/DirectX12/Context/: ContextDX12.cppm
Engine/Graphics/Vulkan/: VulkanFactory.cpp
Engine/Graphics/Vulkan/Context/: ContextVk.cpp
Engine/Graphics/src/: BackendFactory.cppm  BackendInterface.cppm  CMakeLists.txt  GLogger.h  GraphicsBackend.cppm  GraphicsFactory.cpp  GraphicsFactory.cppm
Engine/Graphics/src/Backend/: CMakeLists.txt
Engine/Graphics/src/Backend/DirectX12/: AssertsDX12.cppm  CMakeLists.txt  FactoryDX12.cpp  FactoryDX12.cppm  InterfaceDX12.cpp  InterfaceDX12.cppm  LoggerDX12.h  UtilitiesDX12.cpp  UtilitiesDX12.cppm
Engine/Graphics/src/Backend/DirectX12/Context/: AdapterSelectorDX12.cpp  ContextDX12.cpp  ContextDX12.cppm  DebugDX12.cpp  DebugDX12.cppm  DeviceDX12.cpp  DeviceDX12.cppm  FactoryDX12.cpp  FactoryDX12.cppm
Engine/Graphics/src/Backend/Vulkan/: CMakeLists.txt  FactoryVk.cpp  FactoryVk.cppm
Engine/Graphics/src/Core/: CMakeLists.txt  GraphicsSpecification.cppm
Engine/Graphics/src/DirectX12/: CMakeLists.txt  DX12Factory.cpp  DX12Factory.cppm  InterfaceDX12.cpp  InterfaceDX12.cppm  LoggerDX12.h  SpecificationDX12.cpp  SpecificationDX12.cppm  UtilitiesDX12.cppm
Engine/Graphics/src/DirectX12/Commands/: CommandsDX12.cpp  CommandsDX12.cppm
Engine/Graphics/src/DirectX12/Context/: AdapterSelectorDX12.cpp  AdapterSelectorDX12.cppm  ContextDX12.cpp  ContextDX12.cppm  SwapchainDX12.cpp  SwapchainDX12.cppm
Engine/Graphics/src/DirectX12/Resources/: DescriptorHeapDX12.cpp  DescriptorHeapDX12.cppm
Engine/Graphics/src/DirectX12/Synchronization/: SynchronizationDX12.cpp  SynchronizationDX12.cppm
Engine/Graphics/src/Vulkan/: CMakeLists.txt  InterfaceVk.cpp  InterfaceVk.cppm  LoggerVk.h  VulkanFactory.cpp  VulkanFactory.cppm
Engine/Graphics/src/Vulkan/Context/: ContextVk.cpp  ContextVk.cppm
Engine/Tools/: CMakeLists.txt  Tools.cppm  ToolsFactory.cpp  ToolsFactory.cppm  tools.cpp
Engine/Tools/Filesystem/: Path.cpp  Path.cppm
Engine/Tools/Logging/: Logger.cppm  LoggerImpl.cpp
Engine/Tools/Platform/: Platform.cpp
Engine/Tools/Window/: Window.cpp  Window.cppm  WindowCrossImpl.cpp  WindowCrossImpl.cppm  WindowEvent.cpp  WindowEvent.cppm
Engine/Tools/Window/Cross/: WindowImplCross.cpp  WindowImplCross.cppm
Engine/Tools/Window/Glfw/: WindowImplGlfw.cpp
Engine/Tools/src/: CMakeLists.txt  TLogger.h  ToolsFactory.cpp  ToolsFactory.cppm
Engine/Tools/src/Filesystem/: Path.cpp  Path.cppm
Engine/Tools/src/Logging/: LoggerImpl.cpp  LoggerImpl.h
Engine/Tools/src/Platform/: Platform.cppm
Engine/Tools/src/Window/: IWindow.cppm  Window.cppm  WindowEvent.cppm
Engine/Tools/src/Window/Cross/: WindowImplCross.cpp  WindowImplCross.cppm
Engine/Tools/src/Window/Glfw/: WindowImplGlfw.cpp  WindowImplGlfw.cppm
Engine/Utilities/: CMakeLists.txt  Types.h
Samples/: CMakeLists.txt  main.cpp
Sandbox/: CMakeLists.txt  main.cpp
Scripts/: filter_compile_commands.py  run.py
cmake/: FindClangTidy.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  modules.cmake
